--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,19 @@
 <style>
     .logo {
         font-weight: bold;
+        margin-top: 30px;
+        margin-left: 40%;
+        width: 200px;
+        background-color: white;
+        border-radius: 30px;
     }
     .appinfo {
         font-weight: bold;
         font-size: large;
+        margin-left: 30%;
+        width: 420px;
+        background-color: white;
+        border-radius: 30px;
     }
 </style>
 
