--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -1,20 +1,30 @@
 <style>
   body {
-background-image: url("/static/todo\ bg.png");
+    background-image: url("/static/chat\ wall.jpg");
+}
+.table {
+  position: relative;
+  width: auto;
+  background-color: white;
+  color: white;
+}
+.todo {
+  color: white;
 }
 </style>
 
 {% extends "base.html" %}
 {% block contant %}
+{% include 'navbar.html' %}
+
     <div class="container text-center">
-        {% include 'navbar.html' %}
         {% if msg %}
             <div class="alert alert-success" role="alert" >
                 {{msg}}
             </div>
         {% endif %}
         <br>
-        <h1>Todo</h1>
+        <h1 class="todo">Todo</h1>
         <br>
         <table class="table">
             <thead>
@@ -36,7 +46,7 @@ background-image: url("/static/todo\ bg.png");
                         <div class="mb-3">
                           <input type="hidden" required name="id" value="{{ item.id }}" >
                         </div>
-                        <button type="submit" class="btn btn-primary">Completed</button>
+                        <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">Completed</button>
                       </form>
                     </td>
                 </tr>   
