--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,59 +1,41 @@
 <style>
 
     body {
-  background-image: url("/static/bg\ for\ app.png");
+        background-image: url("/static/chat\ wall.jpg");
 }
     .signup-form{
     width: 250px;
     height: 400px;
-    position: absolute;
-    top: 25%;
-    bottom: 50%;
-    left: 40%;
-    right: 50%;
-    transform: translate(0%,-5%);
+    margin-top: 30px;
+    margin-left: 39%;
     border-radius: 10px;
     padding: 25px;
+    border: 2px solid black;
+    background-color: white;
 }
     
 .signup-form h1{
     width: 200px;
     font-family: sans-serif;
     text-align: center;
-    color: white;
-    font-size: 22px;
-    background-color: blue;
+    color: black;
+    font-size: 30px;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
+    border-bottom: 1px solid black;
 }
 
 .signup-form input{
     width: 200px;
     height: 35px;
     background: transparent;
-    border-bottom: 1px solid #0800ff;
-    border-top: none;
-    border-right: none;
-    border-left: none;
+    border-bottom: 1px solid black;
     color: rgb(255, 255, 255);
     font-size: 15px;
     letter-spacing: 1px;
-    margin-top: 30px;
+    margin-top: 50px;
     font-family: sans-serif;
-}
-
-.signup-button{
-    width: 100px;
-    font-family: sans-serif;
-    text-align: center;
-    color: white;
-    font-size: 15px;
-    background-color: blue;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
-    border: none;
 }
 </style>
 
@@ -70,18 +52,14 @@
                 {{ error }}
             </div>
         {% endfor %}
-            <br>
         <form  method="POST" class="signup-form">
             <h1>Signup Here</h1>
             <div class="mb-3">
                 <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Email">
-            </div>
-            <br>
-            <div class="mb-3">
                 <input type="password" required class="form-control" name="password" placeholder="Password">
             </div>
             <br>
-            <button type="submit" class="signup-button">Registor</button>
+            <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">Registor</button>
             <br>
             <p class="link">Already have an account<br>
             <a href="/">LOGIN</a> here</a></p>
