--- a/templates/ask.html
+++ b/templates/ask.html
@@ -24,12 +24,15 @@
 }
 .question {
     background-color: white;
-    width: 310px;
+    width: 340px;
     height: 120px;
     margin-top: 5%;
     margin-left: 38%;
     border-radius: 5px;
     border: 2px solid black;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 55px;
 }
 </style>
 
