--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,16 @@
+<style>
+.navbar-expand-lg .navbar-collapse {
+    display: flex!important;
+    flex-basis: auto;
+    margin-left: 70;
+}
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: var(--bs-navbar-nav-link-padding-x);
+    padding-left: var(--bs-navbar-nav-link-padding-x);
+    margin-right: 30;
+}
+</style>
+
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home">HOME</a>
@@ -18,7 +31,7 @@
         </li>
       </ul>
       <ul class="navbar-nav pull-right">
-        <a class="navbar-brand">{{username}}</a>
+        <h1><a class="navbar-brand">{{username}}</a></h1>
       </ul>
     </div>
   </div>
