reactiveity of  app

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -34,6 +34,12 @@
     padding-right: 15px;
     padding-bottom: 55px;
 }
+@media only screen and (max-width: 390px) {
+    .question {
+    margin-top: 30%;
+    margin-left: 7%;
+}
+}
 </style>
 
 {% extends "base.html" %}
