--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,10 @@
 }
 #Todo{
     background-color: white;
-    margin-right: 100px;
+    margin-left: 12px;
+    margin-right: 12px;
     margin-top: 70px;
+    margin-bottom: 20px;
     border-radius: 20px;
 }
 #Todo h3{
@@ -28,8 +30,12 @@
 }
 #New{
     background-color: white;
+    margin-left: 12px;
+    margin-right: 12px;
     margin-top: 70px;
+    margin-bottom: 20px;
     border-radius: 20px;
+
 }
 #New h3{
     text-align: center;
