--- a/templates/todos.html
+++ b/templates/todos.html
@@ -8,7 +8,6 @@
 }
 #List{
     background-color: white;
-    margin-right: 100px;
     margin-top: 40px;
     margin-bottom: 50px;
     border-radius: 20px;
@@ -36,6 +35,7 @@
     margin-top: 40px;
     margin-bottom: 50px;
     border-radius: 20px;
+
 }
 #Creat h1{
     text-align: center;
@@ -67,7 +67,7 @@
                             <th scope="col">ID</th>
                             <th scope="col">Tittle</th>
                             <th scope="col">Description</th>
-                            <th scope="col">Action</th>
+                            <th scope="col"></th>
                           </tr>
                         </thead>
                         <tbody>
@@ -89,7 +89,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-md-4 " id="Creat">
+                <div class="col-md-5 " id="Creat">
                     <h1>Creat Todo </h1>
                     <form  id="creat" method="POST" >
                         <div class="mb-3">
