--- a/static/chat.css
+++ b/static/chat.css
@@ -88,3 +88,21 @@ main header > *{
 	background-color:white;
 	border-radius:10px;
 }
+@media only screen and (max-width: 390px) {
+    #container {
+        width: 270px;
+		height: 500px;
+		position: relative;
+		left: 50px;
+    }
+	main header{
+		padding:10px 205px 50px 150px;
+	}
+	#chat{
+		height:391px;
+		width: 280px;
+	}
+	#chat .message{
+		line-height:5px;
+	}
+}
