--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,31 @@
     .appinfo {
         margin-top: 35px;
         margin-left: 0px;
+        margin-bottom: 50px;
+        width:fit-content;
+    }
+}
+@media only screen and (max-width: 375px) {
+    .logo {
+        margin-top: 50px;
+        margin-left: 22%;
+    }
+    .appinfo {
+        margin-top: 35px;
+        margin-left: 0px;
+        margin-bottom: 50px;
+        width:fit-content;
+    }
+}
+@media only screen and (max-width: 765px) {
+    .logo {
+        margin-top: 50px;
+        margin-left: 22%;
+    }
+    .appinfo {
+        margin-top: 35px;
+        margin-left: 10%;
+        margin-bottom: 50px;
         width:fit-content;
     }
 }
