--- a/templates/login.html
+++ b/templates/login.html
@@ -44,6 +44,20 @@
         margin-left: 15%;
     }
 }
+@media screen and (max-width: 375px)
+{
+    .login-form{
+        margin-top: 50px;
+        margin-left: 15%;
+    }
+}
+@media screen and (max-width: 765px)
+{
+    .login-form{
+        margin-top: 50px;
+        margin-left: 18%;
+    }
+}
  
 </style>
 
