--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
 .navbar-expand-lg .navbar-collapse {
     display: flex!important;
     flex-basis: auto;
@@ -9,7 +9,7 @@
     padding-left: var(--bs-navbar-nav-link-padding-x);
     margin-right: 30;
 }
-</style>
+</style> -->
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
