--- a/templates/chat.html
+++ b/templates/chat.html
@@ -58,15 +58,39 @@ textarea.form-control {
             <div class="row justify-content-center" id="banner">
                 <div class="col-md-2 " id="Users">
                     <h4 style="margin-top: 25px; margin-bottom: 30px;">USERS</h4>
-                    {% for item in users_in_db %}
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in users_in_db %}
+                            <tr>
+                                <form method="Post">
+                                    <div class="mb-3">
+                                        <input type="hidden" required name="username" value="{{item.username}}" >
+                                    </div>
+                                    <td style="vertical-align:middle;">
+                                        <button type="submit" style="border:0px;background-color: white;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                                          </svg> {{item.username}}</button>
+                                    </td>
+                                </form>
+                            </tr>   
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    <!-- {% for item in users_in_db %}
                     <form method="POST">
                         <div class="mb-3">
                             <input type="hidden" required name="username" value="{{item.username}}" >
                         </div>
-                        <button type="submit" style="border:2px solid black;background-color: white;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary">{{item.username}}</button>
+                        <button type="submit" style="border:0px;background-color: white;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">{{item.username}}</button>
                     </form>
-                    {% endfor %}
-                    <a style="border:2px solid black;background-color: white;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/groupchat">GROUP</a>
+                    {% endfor %} -->
+                    <!-- <a style="border:2px solid black;background-color: white;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/groupchat">GROUP</a> -->
                 </div>
                 <div class="col-md-6 " >
                 <div id="container">
@@ -114,5 +138,6 @@ textarea.form-control {
                 </div>
             </div>
         </div>
+        <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/group">CREATE GROUP</a>
     </div>
 {% endblock %}
