--- a/templates/group.html
+++ b/templates/group.html
@@ -6,31 +6,29 @@
 {% extends "base.html" %}
 
 {% block contant %}
+{% include 'navbar.html' %}
+
 <div class="container text-center">
-    <h1>My Groups</h1>
+    <h1 style="color:white;margin-top: 30px;">My Groups</h1>
+    <br>
     {% for item in mygroups %}
-    <!-- <form method="POST"> -->
-        <!-- <div class="mb-3">
-            <input type="hidden" required name="groupname" value="{{item.groupname}}" >
-        </div> -->
         <button type="submit" style="border:2px solid black;background-color: white;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary">{{item.groupname}}</button>
-    <!-- </form> -->
     {% endfor %}
-    <h1>Creat Group</h1>
+    <br>
+    <br>
+    <h1 style="color:white;">Creat Group</h1>
+    {% for error in errors %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+    {% endfor %}
     <form method="POST">
         <div class="mb-3">
             <input type="text" required class="form-control" name="groupname" placeholder="Enter Groupname ">
-            <!-- {% for item in users_in_db %}
-            <form method="POST">
-                <div class="mb-3">
-                    <input type="hidden" required name="member" value="{{item.username}}" >
-                </div>
-                <button type="submit" style="border:2px solid black;background-color: white;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary">{{item.username}}</button>
-            </form>
-            {% endfor %} -->
         </div>
         <br>
         <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">Creat</button>
     </form>
+    <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/managegroups">MANAGE GROUPS</a>
 </div>
 {% endblock %}
