--- a/templates/signup.html
+++ b/templates/signup.html
@@ -37,6 +37,20 @@
     margin-top: 50px;
     font-family: sans-serif;
 }
+@media screen and (max-width: 390px)
+{
+    .signup-form{
+        margin-top: 100px;
+        margin-left: 15%;
+    }
+}
+@media screen and (max-width: 375px)
+{
+    .signup-form{
+        margin-top: 50px;
+        margin-left: 15%;
+    }
+}
 </style>
 
 {% extends "base.html" %}
